--- a/css/style.css
+++ b/css/style.css
@@ -146,11 +146,10 @@ a:hover:after {
 
 
 /* 포트폴리오섹션스타일 */
-
 .Portfolio-container {
   color: #8a909b;
-  max-width: 100%;
-  height: auto;
+  margin: 0 auto;
+  height: 2500px;
   background-image: url('http://bdmp-003.cafe24.com/bizdemo40925/img/images/pattern/pattern-dark.jpg');
 }
 
@@ -159,16 +158,16 @@ a:hover:after {
   text-decoration: underline;
   text-decoration-color: #ee5f5f;
   text-align: center;
-  padding-top: 130px;
+  padding-top: 100px;
   font-size: 45px;
 }
 
 .Portfolio-wrapper {
   position: relative;
-  top: 200px;
+  top: 130px;
   margin: 0 auto;
   width: 1600px;
-  height: 1000px;
+  height: 700px;
 }
 
 .por-image {
@@ -185,13 +184,13 @@ a:hover:after {
 .por-text {
   text-align: center;
   float: left;
-  width: 600px;
+  width: 30%;
 }
 
 .por-text h1 {
   font-size: 55px;
-  padding-top: 150px;
-  padding-bottom: 70px;
+  padding-top: 130px;
+  padding-bottom: 50px;
 }
 
 .por-text p {
@@ -199,17 +198,31 @@ a:hover:after {
 }
 
 
-/* 콘텐트스타일 */
+/* 콘텍트스타일 */
 .contact-container {
-  width: 100%;
-  height: 400px;
-  background-image: url('http://bdmp-003.cafe24.com/bizdemo40925/img/images/pattern/pattern-dark.jpg');
+  max-width: 100%;
+  height: 300px;
 }
 
 .contact-wrapper {
   width: 1700px;
   margin: 0 auto;
   height: auto;
+}
+
+.contact-text{
+  text-align: center;
+}
+
+.contact-text h1{
+  margin-top:150px;
+  font-size: 90px;
+}
+
+.contact-text p
+{
+  display: inline-block;
+  font-size: 25px;
 }
 
 
